--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="index.css">
 </head>
 
-<body>
-<ul id="message_list"></ul>
-<form id="message_area" action="">
-    <input id="text_area" autocomplete="off" />
-    <button>Send</button>
+<body style="background-color: black;">
+<ul style="list-style-type: none; font-size: 32px; color: white;" id="message_list"></ul>
+<form style="  position: relative;padding: 15px 0 0;margin-top: 10px; width: 50%;" id="message_area" action="">
+    <input style="font-family: inherit;width: 100%;border: 0;border-bottom: 2px solid gray;outline: 0;font-size: 1.3rem;color: white;padding: 7px 0;background: transparent;transition: border-color 0.2s;
+  " id="text_area" autocomplete="off" />
+    <button style="font-family: inherit;border: 2px solid gray;font-size: 1.3rem;color: white;padding: 7px 0;background: transparent;transition: border-color 0.2s;">Send</button>
 </form>
 
 <script>
